--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.12",
+    "http-proxy-middleware": "^3.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
