--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@nextui-org/autocomplete": "^2.1.2",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/react": "^2.4.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
     "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
@@ -24,7 +28,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
