--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.21",
     "@nextui-org/autocomplete": "^2.1.2",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/react": "^2.4.2",
@@ -25,6 +26,7 @@
     "framer-motion": "^11.2.12",
     "http-proxy-middleware": "^3.0.0",
     "next": "14.2.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
